fix stakers title cards in dark mode

--- a/packages/admin-ui/src/pages/stakers/components/columns.scss
+++ b/packages/admin-ui/src/pages/stakers/components/columns.scss
@@ -7,6 +7,17 @@
   margin-top: 15px;
 }
 
+.stakers-dark {
+  .consensus-client,
+  .execution-client,
+  .mev-boost,
+  .remote-signer {
+    .title {
+      color: var(--color-dark-maintext) !important;
+    }
+  }
+}
+
 .consensus-client,
 .execution-client,
 .mev-boost,
@@ -30,12 +41,11 @@
   > *:not(:last-child) {
     margin-bottom: 1rem;
   }
-
   // Button feel
   &:hover:not(.isSelected) {
+    cursor: pointer;
     border-color: rgb(218, 218, 218);
     background-color: rgb(218, 218, 218);
-    cursor: pointer;
   }
   &.isSelected {
     border-color: var(--dappnode-color);
